--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -40,9 +40,9 @@
 
 ## 第一卷
 
-### 第一次国内革命战争时期(1924.1-1927.7)
+### 第一次国内革命战争时期(1924.01-1927.07)
 
-#### 中国社会各阶级的分析(1925.12.1)
+#### 中国社会各阶级的分析(1925.12.01)
 
 **中国社会各阶级的分析**[^1-1-1-*]
 
@@ -88,7 +88,7 @@
 [^1-1-1-16]: 指一九二五年六月一日开始的上海大罢工和六月十九日开始的香港大罢工。这两处罢工是当时全国反帝爱国运动的支柱。前者有二十多万工人参加，坚持了三四个月；后者有二十五万工人参加，坚持了一年零四个月，是截至当时为止的世界工人运动史中时间最长的一次罢工。
 [^1-1-1-17]: 三合会、哥老会、大刀会、在理会、青帮是旧中国的一些民间秘密团体，参加者主要的是破产农民、失业手工业工人和流氓无产者。这类团体大都用宗教迷信为团聚成员的工具，采取家长制的组织形式，有的还拥有武装。参加这类团体的人，在社会生活中有互相援助的义务，有时还共同反抗压迫他们的地主、官僚和外国侵略者。但是，农民和手工业工人不可能依靠这类团体得到出路。同时，由于这类团体带有严重的封建性和盲目的破坏性，它们又往往容易被反动统治阶级和帝国主义势力所操纵和利用。随着工人阶级力量的壮大和中国共产党的成立，农民和手工业工人在共产党的领导之下逐步地建立了完全新式的群众组织，这类落后的团体就失掉了它们的存在价值。
 
-#### 湖南农民运动考察报告(1927.3)
+#### 湖南农民运动考察报告(1927.03)
 
 **湖南农民运动考察报告**[^1-1-2-*]
 
@@ -319,9 +319,9 @@
 [^1-1-2-26]: 刘岳峙，湖南国民党右派组织“左社”的头子。一九二七年二月，他被当时还执行革命政策的国民党湖南省党部清洗出党，成为人所共知的反动分子。
 [^1-1-2-27]: 叶公好龙，见汉朝刘向所作《新序·杂事》：“叶公子高好龙，钩以写龙，凿以写龙，屋室雕文以写龙。于是天龙闻而下之，窥头于牖，施尾于堂。叶公见之，弃而还走，失其魂魄，五色无主。是叶公非好龙也，好夫似龙而非龙者也。”毛泽东在这里用以比喻蒋介石辈口谈革命，实际上畏惧革命，反对革命。
 
-### 第二次国内革命战争时期(1927.8-1937)
+### 第二次国内革命战争时期(1927.08-1937)
 
-#### 中国的红色政权为什么能够存在？(1928.10.5)
+#### 中国的红色政权为什么能够存在？(1928.10.05)
 
 **中国的红色政权为什么能够存在？**[^1-2-1-*]
 
@@ -678,7 +678,7 @@
 [^1-2-3-4]: 黄巢（？——八八四），曹州冤句（今山东菏泽）人，唐朝末年农民起义领袖。公元八七五年，即唐僖宗乾符二年，黄巢聚众响应王仙芝领导的起义。公元八七八年，王仙芝被杀后，黄巢收集王的余部，被推为领袖，号“冲天大将军”。他领导的起义队伍，曾经多次出山东流动作战，转战于山东、河南、安徽、江苏、湖北、湖南、江西、浙江、福建、广东、广西、陕西等省。公元八八○年，黄巢攻破潼关，不久占领长安，建立齐国，自称皇帝。后因内部分裂（大将朱温降唐），又受到李克用沙陀军及诸道军队的进攻，黄巢被迫退出长安，转入河南，由河南回到山东，于公元八八四年失败自杀。黄巢领导的农民战争持续了十年，是中国历史上有名的农民战争之一。它沉重地打击了当时的封建统治阶级，受到贫苦农民的拥护。由于黄巢起义军只是简单地进行流动的战争，没有建立过比较稳固的根据地，所以被封建统治者称为“流寇”。
 [^1-2-3-5]: 李闯即李自成（一六○六——一六四五），陕西米脂人，明朝末年农民起义领袖。一六二八年，即明思宗崇祯元年，陕西北部形成农民起义的潮流。李自成参加高迎祥的起义队伍，曾经由陕西入河南，到安徽，折回陕西。一六三六年高迎祥死，李自成被推为闯王。李自成在群众中的主要口号是“迎闯王，不纳粮”；同时他不准部下扰害群众，曾经提出“杀一人如杀我父，淫一妇如淫我母”的口号，来约束自己的部队。因此，拥护他的人很多，成为当时农民起义的主流之一。但他也没有建立过比较稳固的根据地，总是流动作战。他在被推为闯王后，率部入川，折回陕南，经湖北又入川，又经湖北入河南，旋占湖北襄阳、安陆等地，再经河南攻陕占西安，于一六四四年经山西攻入北京。不久，在明将吴三桂勾引清兵联合进攻下失败。
 
-#### 星星之火，可以燎原(1930.1.5)
+#### 星星之火，可以燎原(1930.01.05)
 
 **星星之火，可以燎原**[^1-2-4-*]
 
@@ -743,7 +743,7 @@
 [^1-2-4-18]: 朱培德（一八八九——一九三七），云南盐兴（今禄丰县）人。当时任国民党江西省政府主席。
 [^1-2-4-19]: 熊式辉（一八九三——一九七四），江西安义人。当时任国民党江西省政府委员、第五师师长。
 
-#### 反对本本主义(1930.5)
+#### 反对本本主义(1930.05)
 
 **反对本本主义**[^1-2-5-*]
 
@@ -877,7 +877,7 @@
 [^1-2-5-7]: 这里所说的山头指江西、湖南边界的井冈山地区，平地指江西南部、福建西部地区。一九二九年一月，毛泽东、朱德率领红军第四军的主力，自井冈山出发，向江西南部、福建西部进军，开辟赣南、闽西两大革命根据地。
 [^1-2-5-8]: 指一九二八年六月至七月召开的中国共产党第六次全国代表大会通过的各项决议案。一九二九年初，红军第四军前敌委员会曾经把这些决议案汇集印成单行本，发给红军和地方的党组织。
 
-#### 必须注意经济工作(1933.8.12)
+#### 必须注意经济工作(1933.08.12)
 
 **必须注意经济工作**[^1-2-6-*]
 
@@ -952,7 +952,7 @@
 [^1-2-7-*]: 这个文件，是毛泽东一九三三年十月为纠正在土地改革工作中发生的偏向、正确地解决土地问题而写的，曾由当时中央工农民主政府通过，作为划分农村阶级成分的标准。
 [^1-2-7-1]: 旧中国农村中有许多的公共土地。有些是政治性的，例如一些区乡政府所有的土地。有些是宗族性的，例如各姓祠堂所有的土地。有些是宗教性的，例如佛教、道教、天主教、伊斯兰教的寺、观、教堂、清真寺所有的土地。有些是社会救济或者社会公益性的，例如义仓的土地和为修桥补路而设置的土地。有些是教育性的，例如学田。所有这些土地，大部分都掌握在地主富农手里，只有一小部分，农民有权干预。
 
-#### 我们的经济政策(1934.1)
+#### 我们的经济政策(1934.01)
 
 我们的经济政策[^1-2-8-*]
 
@@ -992,7 +992,7 @@
 [^1-2-8-1]: 农业生产在革命根据地建立的头一二年，往往有些下降，主要地是由于在分配土地期间，地权还没有确定，新的经济秩序还没有走上轨道，以致农民的生产情绪还有些波动。
 [^1-2-8-2]: 劳动互助社和耕田队，是当时革命根据地的农民在个体经济的基础上，为调剂劳动力以便进行生产而建立起来的劳动互助组织。这种组织实行自愿互利的原则：大家自愿结合，互相帮助做工；结算时，工数对除，少做的按工算钱给多做的。此外，劳动互助社还优待红军家属，帮助孤老。帮红军家属做工是尽义务，帮孤老做工只吃饭不要工钱。因为这种劳动互助组织对于生产起了很大的作用，采取的办法又很合理，所以得到群众的热烈拥护。毛泽东的《长冈乡调查》和《才溪乡调查》（载《毛泽东农村调查文集》），对此都有记载。
 
-#### 关心群众生活，注意工作方法(1934.1.27)
+#### 关心群众生活，注意工作方法(1934.01.27)
 
 关心群众生活，注意工作方法[^1-2-9-*]
 
@@ -1793,7 +1793,7 @@
 
 [^1-2-12-9]:这封信对于国民党的反动统治和当时的国民党二中全会，作了义正词严的批判，同时申明了中国共产党关于建立抗日民族统一战线和准备重新建立国共合作的政策。以下是这封信的主要部分：“贵党二中全会所说的‘集中统一’，实在未免本末倒置。须知十年以来的内战和不统一，完全是因为贵党和贵党政府依赖帝国主义的误国政策，尤其是‘九一八’以来一贯的不抵抗政策造成的。在贵党和贵党政府‘攘外必先安内’的口号之下，进行了连年不绝的内战，举行了无数次对于红军的围攻，不遗余力地镇压了全国人民的爱国运动和民主运动。直至最近，还是放弃东北和华北不顾，忘记日本帝国主义是中国的最大敌人，而把一切力量反对红军和从事贵党自己营垒之间的内争，用一切力量拦阻红军的抗日去路，捣乱红军的抗日后方，漠视全国人民的抗日要求，剥夺全国人民的自由权利。爱国有罪，冤狱遍于国中；卖国有赏，汉奸弹冠相庆。以这种错误政策来求集中和统一，真是缘木求鱼，适得其反。我们现在正告诸位先生，如果你们不根本改变自己的错误方针，如果不把仇恨之心放到日本帝国主义身上去，而依旧放在自己同胞身上的话，那末你们即欲勉强维持现状，也是不可能的，集中统一以及所谓‘现代国家’的说法，更是完全的空谈。全国人民现在所要的是抗日救国的集中统一，而不是媚外残民的集中统一。全国人民现在热烈要求一个真正救国救民的政府，要求一个真正的民主共和国。全国人民要求一个为他们自己谋利益的民主共和政府。这个政府的主要纲领，必须：第一，是能够抵抗外侮的。第二，是能够给予人民以民主权利的。第三，是能够发展国民经济，减轻以至免除人民生活上的痛苦的。如果要说‘现代国家’，这些纲领才是殖民地和半殖民地的中国在现时代所真正要求的。全国人民现在正以热烈的愿望和坚毅的决心，为着实现这样的目标而斗争。而贵党和贵党政府的政策，则与此种全国人民的愿望背道而驰，以此而求人民的信任，是决不可能的。中国共产党和中国红军，今特郑重宣言：我们赞助建立全中国统一的民主共和国，赞助召集由普选权选举出来的国会，拥护全国人民和抗日军队的抗日救国代表大会，拥护全国统一的国防政府。我们宣布：全中国统一的民主共和国建立之时，红色区域即可成为全中国统一的民主共和国的一个组成部分，红色区域人民的代表，将参加全中国的国会，并在红色区域实行和全中国一样的民主制度。我们认为贵党二中全会所决定组织的国防会议，以及贵党和贵党政府正在召集中的国民大会，是不能完成集中统一抗日救亡的任务的。依照贵党二中全会所通过的国防会议条例看来，则国防会议的组织，只限于贵党和贵党政府当权执政的少数官员；国防会议的任务，是仅充贵党政府的咨询机关。这种会议之不能有任何的成就和不能取得人民的任何信任，是十分明显的。而诸位先生所要召集的国民大会，依据贵党政府所通过的《中华民国宪法草案》和《国民大会组织法及代表选举法》看来，也同样地不能有什么成就和不能得到人民的信任，因为这种国民大会仅仅是贵党和贵党政府少数官员们所操纵的机关，是这些官员们的附属品和装饰品。这样的国防会议和国民大会，同本党所主张的全国抗日救国代表大会（即国防会议），中华民主共和国和它的国会，是没有丝毫相同之点的。我们认为抗日救国的国防会议，必须吸收各党各派各界各武装队伍的代表，构成真正能够决定抗日救国大计的权力机关，并从这一会议中产生全国统一的国防政府。而国民大会也必须是全国人民普选出来的国会，是中华民主共和国的最高权力机关。只有这样的国防会议和全国国会，才能是全国人民所欢迎、拥护和参加的，才能把救国救民的伟大事业，放在坚固不拔的基础之上。否则任何好听的名词，均决然无补实际，决然不为全国人民所同意。贵党和贵党政府历来所召集的各种会议的失败，就是最好的明证。贵党二中全会宣言又说：‘险阻之来，本可意计，断不因国事之艰虞，而自懈其应尽之职责。’‘本党对于国家兴亡，必当尽其心思才力，贯彻始终。’诚然，贵党是中国最大部分领土中的统治的政党，一切过去实施的政治责任，不能不由贵党负担。在一党专政的国民党政府之下，国民党决不能逃避其责任。尤其是九一八事变以来，贵党违背全国民意，违背全民族利益，执行了绝对错误的政策，得到了丧失几乎半个中国的结果，这个责任是绝对不能推诿于任何别人的。在我们和全国人民看来，半个中国由贵党而沦亡，决不能不课督贵党以恢复领土主权的责任。同时，贵党中许多有良心的分子，现在也确然憬悟于亡国的可怕和民意的不可侮，而开始了新的转变，开始了对于自己党中祸党祸国分子的愤怒和不满。中国共产党完全同情于这种新的转变，热烈地欢迎这些有爱国心的有良心的中国国民党党员的志气和觉悟，欢迎他们在民族危亡面前愿意牺牲奋斗和勇于革新的精神。我们知道，在贵党中央和各省党部中，中央和各省政府中，在教育界，在科学界，在艺术界，在新闻界，在实业界，在妇女界，在宗教界，在医药界，在警察界，在各种民众团体，尤其在广大的军队、国民党的新旧党员和各级领袖中，实在有很多觉悟和爱国的人士，并且这样的人还在日益增加着，这是非常可喜的现象。中国共产党随时准备着和这些国民党人携手，组织坚固的民族统一战线，去反对全民族的最大敌人——日本帝国主义。我们希望这些国民党员能够在国民党中迅速形成一种支配的势力，去压倒那些不顾民族利益，实际成为日本帝国主义代理人，实际成为亲日汉奸的最坏和最可耻的国民党员——那些侮辱孙中山先生的国民党员，恢复孙中山先生革命的三民主义精神，重振孙中山先生的联俄联共和扶助农工的三大政策，把自己的‘心思才力’去‘贯彻’革命的三民主义和三大政策的‘始终’，‘贯彻’孙中山先生革命遗嘱的‘始终’。我们希望他们和全国各党各派各界爱国领袖和爱国人民一道，坚决地担负继承孙中山先生革命事业的责任，坚决地为驱逐日本帝国主义、挽救中国于危亡而斗争，为全国人民的民主权利而斗争，为发展中国国民经济解除最大多数人民的痛苦而斗争，为实现中华民主共和国及其民主国会民主政府而斗争。中国共产党向一切中国国民党人宣言：假如你们真正这样干的时候，我们坚决地赞助你们，我们愿意同你们结成一个坚固的革命的统一战线，如像一九二四年至一九二七年中国伟大的革命时期两党结成反对民族压迫和封建压迫的伟大的统一战线一样，因为这是今日救亡图存的唯一正确的道路。”
 
-#### 中国共产党在抗日时期的任务(1937.5.3)
+#### 中国共产党在抗日时期的任务(1937.05.03)
 
 **中国共产党在抗日时期的任务**[^1-2-13-*]
 
@@ -1883,7 +1883,7 @@
 [^1-2-13-21]: 一九二四年，孙中山在共产党人的帮助下，将国民党改组成各阶级的民主革命的联盟。当时，中国共产党的许多党员曾以个人名义参加国民党。一九二七年蒋介石、汪精卫相继叛变革命以后，在全国各地屠杀共产党人以及国民党内许多真正拥护孙中山三大政策的左派分子，他们称之为“清党运动”。从此，国民党基本上变成代表大地主大资产阶级的反动集团。
 [^1-2-13-22]: 这里是指一九二七年上半年陈独秀右倾投降主义的领导所造成的情况。
 
-#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.5.8)
+#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.05.08)
 
 **为争取千百万群众进入抗日民族统一战线而斗争**[^1-2-14-*]
 
@@ -1969,7 +1969,7 @@
 [^1-2-14-13]: 见一九三五年五月四日斯大林在克里姆林宫举行的红军学院学员毕业典礼上的讲话。原文如下：“人才，干部是世界上所有宝贵的资本中最宝贵最有决定意义的资本。应该了解：在我们目前的条件下，‘干部决定一切’。”（《斯大林选集》下卷，人民出版社1979年版，第373页）
 [^1-2-14-14]: 这里所说的分歧，指一九三五年至一九三六年间党中央路线和张国焘退却路线之间的分歧。一九三六年十月，红军第四方面军到达甘肃会宁地区同红军第一方面军会合。一九三七年三月下旬，中共中央在延安召开政治局扩大会议，讨论国内政治形势和党的任务，对张国焘路线的错误及其危害进行了系统的批判和总结，使党和红军在思想上、政治上和组织上达到新的一致，标志着这个分歧已经解决。至于后来张国焘公开叛党，堕落为反革命，那已不是领导路线上的问题，而只是个人的叛变行动了。
 
-#### 实践论(1937.7)
+#### 实践论(1937.07)
 
 **实践论**[^1-2-15-*]
 
@@ -2044,7 +2044,7 @@
 [^1-2-15-10]: 见斯大林《论列宁主义基础》第三部分《理论》。新的译文是：“离开革命实践的理论是空洞的理论，而不以革命理论为指南的实践是盲目的实践。”（《斯大林选集》上卷，人民出版社1979年版，第199—200页）
 [^1-2-15-11]: 参见列宁《唯物主义和经验批判主义》第二章第五节。原文是：“人类思维按其本性是能够给我们提供并且正在提供由相对真理的总和所构成的绝对真理的。”（《列宁全集》第18卷，人民出版社1988年版，第135页）
 
-#### 矛盾论(1937.8)
+#### 矛盾论(1937.08)
 
 **矛盾论**[^1-2-16-*]
 
@@ -2331,7 +2331,7 @@
 
 ### 抗日战争时期（上）(1937-1941)
 
-#### 反对日本进攻的方针、办法和前途(1937.7.23)
+#### 反对日本进攻的方针、办法和前途(1937.07.23)
 
 **反对日本进攻的方针、办法和前途[^2-1-1-*]**
 
@@ -2454,6 +2454,133 @@
 [^2-1-1-4]: 《新闻检查条例》，指国民党为压制人民言论自由于一九三三年一月十九日制定的《新闻检查标准》，同年十月五日又作了补充规定。《新闻检查标准》规定，在国民党统治区报刊上发表的任何文字，都要在刊出以前，将稿件送交国民党新闻检查官检查。检查官可以任意删改和扣留。
 [^2-1-1-5]: 参见本书第一卷《中国共产党在抗日时期的任务》第八节。
 [^2-1-1-6]: 见本书第一卷《中国共产党在抗日时期的任务》注[19]。
+
+#### 为动员一切力量争取抗战胜利而斗争(1937.08.25)
+
+**为动员一切力量争取抗战胜利而斗争[^2-1-2-*]**
+
+（一九三七年八月二十五日）
+
+（甲）七月七日卢沟桥事变，是日本帝国主义大举进攻中国本部的开始。卢沟桥中国军队的抗战，是中国全国性抗战的开始。由于日寇无底止的进攻，全国人民的坚决斗争，民族资产阶级的倾向抗日，中国共产党抗日民族统一战线政策的努力提倡、坚决实行和取得全国的赞助，使得“九一八”[^2-1-2-1]以来中国统治当局的对日不抵抗政策，在卢沟桥事变后开始转变到实行抗战的政策，使得一二九运动[^2-1-2-2]以来中国革命发展的形势，由停止内战准备抗战的阶段，过渡到了实行抗战的阶段。以西安事变[^2-1-2-3]和国民党三中全会[^2-1-2-4]为起点的国民党政策上的开始转变，以及蒋介石先生七月十七日在庐山关于抗日的谈话，和他在国防上的许多措施，是值得赞许的。所有前线的军队，不论陆军、空军和地方部队，都进行了英勇的抗战，表示了中华民族的英雄气概。中国共产党谨以无上的热忱，向所有全国的爱国军队爱国同胞致民族革命的敬礼。
+
+（乙）但在另一方面，在七月七日卢沟桥事变以后，国民党当局又依然继续其“九一八”以来所实行的错误政策，进行了妥协和让步[^2-1-2-5]，压制了爱国军队的积极性，压制了爱国人民的救国运动。日本帝国主义在夺取平津之后，依靠其野蛮的武力，借助德意帝国主义的声援，利用英帝国主义的动摇，利用中国国民党对于广大劳动民众的隔离，毫无疑义将继续坚持其大规模进攻的方针，实行第二步、第三步的预定的作战计划，向着整个华北及其他各地作猛烈的进攻。察哈尔[^2-1-2-6]、上海等地的烽火已经燃烧起来了。为了挽救祖国的危亡，抵御强寇的进攻，保卫华北和沿海，收复平津和东北，全国人民和国民党当局必须深切地认识东北平津丧失的教训，认识阿比西尼亚亡国的覆辙[^2-1-2-7]，认识苏联过去战胜外敌的历史[^2-1-2-8]，认识西班牙现在胜利地保卫马德里[^2-1-2-9]的经验，坚固地团结起来，为保卫祖国而作战到底。今后的任务是“动员一切力量争取抗战胜利”，这里的关键是国民党政策的全部的和彻底的转变。国民党在抗战问题上的进步是值得赞扬的，这是中国共产党和全国人民所多年企望的，我们欢迎这种进步。然而国民党政策在发动民众和改革政治等问题上依然没有什么转变，对人民抗日运动基本上依然不肯开放，对政府机构依然不愿作原则的改变，对人民生活依然没有改良的方针，对共产党关系也没有进到真诚合作的程度。在如此的亡国灭种的紧急关头，国民党如果还因循上述的政策不愿迅速改变，将使抗日战争蒙受绝大的不利。有些国民党人说：待抗战胜利后再实行政治改革吧。他们以为单纯的政府抗战便可以战胜日寇，这是错误的。单纯的政府抗战只能取得某些个别的胜利，要彻底213地战胜日寇是不可能的。只有全面的民族抗战才能彻底地战胜日寇。然而要实现全面的民族抗战，必须国民党政策有全部的和彻底的转变，必须全国上下共同实行一个彻底抗日的纲领，这就是根据第一次国共合作时孙中山先生所手订的革命的三民主义和三大政策的精神而提出的救国纲领。
+
+（丙）中国共产党以满腔的热忱向中国国民党、全国人民、全国各党各派各界各军提出彻底战胜日寇的十大救国纲领。中国共产党坚决相信，只有完全地、诚意地和坚决地执行这个纲领，才能达到保卫祖国战胜日寇之目的。否则，因循坐误，责有攸归；全国丧亡，嗟悔无及。十大救国纲领如下：
+
+一、打倒日本帝国主义：
+
+对日绝交，驱逐日本官吏，逮捕日本侦探，没收日本在华财产，否认对日债务，废除与日本签订的条约，收回一切日本租界。
+
+为保卫华北和沿海各地而血战到底。
+
+为收复平津和东北而血战到底。
+
+驱逐日本帝国主义出中国。
+
+反对任何的动摇妥协。
+
+二、全国军事的总动员：
+
+动员全国陆海空军，实行全国抗战。
+
+反对单纯防御的消极的作战方针，采取独立自主的积极的作战方针。
+
+设立经常的国防会议，讨论和决定国防计划和作战方针。
+
+武装人民，发展抗日的游击战争，配合主力军作战。
+
+改革军队的政治工作，使指挥员和战斗员团结一致。
+
+军队和人民团结一致，发扬军队的积极性。
+
+援助东北抗日联军，破坏敌人的后方。
+
+实现一切抗战军队的平等待遇。
+
+建立全国各地军区，动员全民族参战，以便逐步从雇佣兵役制转变为义务兵役制。
+
+三、全国人民的总动员：
+
+全国人民除汉奸外，都有抗日救国的言论、出版、集会、结社和武装抗敌的自由。
+
+废除一切束缚人民爱国运动的旧法令，颁布革命的新法令。
+
+释放一切爱国的革命的政治犯，开放党禁。
+
+全中国人民动员起来，武装起来，参加抗战，实行有力出力，有钱出钱，有枪出枪，有知识出知识。
+
+动员蒙民、回民及其他少数民族，在民族自决和自治的原则下，共同抗日。
+
+四、改革政治机构：
+
+召集真正人民代表的国民大会，通过真正的民主宪法，决定抗日救国方针，选举国防政府。
+
+国防政府必须吸收各党各派和人民团体中的革命分子，驱逐亲日分子。
+
+国防政府采取民主集中制，它是民主的，又是集中的。
+
+国防政府执行抗日救国的革命政策。
+
+实行地方自治，铲除贪官污吏，建立廉洁政府。
+
+五、抗日的外交政策：
+
+在不丧失领土主权的范围内，和一切反对日本侵略主义的国家订立反侵略的同盟及抗日的军事互助协定。
+
+拥护国际和平阵线，反对德日意侵略阵线。
+
+联合朝鲜和日本国内的工农人民反对日本帝国主义。
+
+六、战时的财政经济政策：
+
+财政政策以有钱出钱和没收汉奸财产作抗日经费为原则。经济政策是：整顿和扩大国防生产，发展农村经济，保证战时生产品的自给。提倡国货，改良土产。禁绝日货，取缔奸商，反对投机操纵。
+
+七、改良人民生活：
+
+改良工人、职员、教员和抗日军人的待遇。
+
+优待抗日军人的家属。
+
+废除苛捐杂税。
+
+减租减息。
+
+救济失业。
+
+调节粮食。
+
+赈济灾荒。
+
+八、抗日的教育政策：
+
+改变教育的旧制度、旧课程，实行以抗日救国为目标的新制度、新课程。
+
+九、肃清汉奸卖国贼亲日派，巩固后方。
+
+十、抗日的民族团结：
+
+在国共两党合作的基础上，建立全国各党各派各界各军的抗日民族统一战线，领导抗日战争，精诚团结，共赴国难。
+
+（丁）必须抛弃单纯政府抗战的方针，实现全面的民族抗战的方针。政府必须和人民团结起来，恢复孙中山先生的全部革命精神，实行上述的十大纲领，争取抗日战争的彻底胜利。中国共产党及其所领导的民众和武装力量，决本上述纲领，站在抗日的最前线，为保卫祖国流最后一滴血。中国共产党在自己一贯的方针下愿意和中国国民党及全国其他党派，站在一条战线上，手携手地团结起来，组成民族统一战线的坚固长城，战胜万恶的日寇，为独立自由幸福的新中国而斗争。为了达到这一目的，应该坚决反对那种投降妥协的汉奸理论，同时也应该坚决反对那种以为无法战胜日寇的民族失败主义。中国共产党坚决相信，在实现上述十大纲领的条件下，战胜日寇的目的是一定能达到的。只要四亿五千万同胞一齐努力，最后的胜利是属于中华民族的！
+
+打倒日本帝国主义！
+
+民族革命战争万岁！
+
+独立自由幸福的新中国万岁！
+
+##### 注释
+
+[^2-1-2-*]: 这是毛泽东为中共中央宣传部起草的关于形势与任务的宣传鼓动提纲。这个提纲为一九三七年八月二十二日至二十五日在陕北洛川召开的中共中央政治局扩大会议所通过。
+[^2-1-2-1]: 见本书第一卷《论反对日本帝国主义的策略》注[4]。
+[^2-1-2-2]: 见本书第一卷《论反对日本帝国主义的策略》注[8]。
+[^2-1-2-3]: 参见本书第一卷《关于蒋介石声明的声明》注[1]。
+[^2-1-2-4]: 见本书第一卷《中国共产党在抗日时期的任务》注[11]。
+[^2-1-2-5]: 参见本卷《反对日本进攻的方针、办法和前途》一文题解。
+[^2-1-2-6]: 见本书第一卷《论反对日本帝国主义的策略》注[13]。
+[^2-1-2-7]: 参见本书第一卷《中国共产党在抗日时期的任务》第八节。
+[^2-1-2-8]: 参见本书第一卷《论反对日本帝国主义的策略》注[29]。
+[^2-1-2-9]: 马德里是西班牙的首都。一九三六年七月，德意法西斯支持西班牙佛朗哥法西斯势力发动叛乱，并武装干涉西班牙内政。西班牙人民在人民阵线政府领导之下，进行了保卫民主反对侵略的英勇抗战。这个战争，以马德里的保卫战最为激烈。保卫马德里的战争，从一九三六年十月起，前后坚持两年又五个月的时间。由于英法等帝国主义国家用虚伪的所谓“不干涉”政策帮助侵略者，又由于人民阵线内部发生了分化，马德里在一九三九年三月陷落。
 
 ## 第三卷
 
