--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -32,19 +32,19 @@
 
 ## 第一卷
 
-### 第一次国内革命战争时期(1924.1-1927.7)
+### 第一次国内革命战争时期(1924.01-1927.07)
 
-#### 中国社会各阶级的分析(1925.12.1)
+#### 中国社会各阶级的分析(1925.12.01)
 
 [中国社会各阶级的分析](毛泽东选集(1-7卷静火版)/第一卷/第一次国内革命战争时期/中国社会各阶级的分析.md)
 
-#### 湖南农民运动考察报告(1927.3)
+#### 湖南农民运动考察报告(1927.03)
 
 [湖南农民运动考察报告](毛泽东选集(1-7卷静火版)/第一卷/第一次国内革命战争时期/湖南农民运动考察报告.md)
 
-### 第二次国内革命战争时期(1927.8-1937)
+### 第二次国内革命战争时期(1927.08-1937)
 
-#### 中国的红色政权为什么能够存在？(1928.10.5)
+#### 中国的红色政权为什么能够存在？(1928.10.05)
 
 [中国的红色政权为什么能够存在？](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国的红色政权为什么能够存在？.md)
 
@@ -56,15 +56,15 @@
 
 [关于纠正党内的错误思想](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/关于纠正党内的错误思想.md)
 
-#### 星星之火，可以燎原(1930.1.5)
+#### 星星之火，可以燎原(1930.01.05)
 
 [星星之火，可以燎原](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/星星之火，可以燎原.md)
 
-#### 反对本本主义(1930.5)
+#### 反对本本主义(1930.05)
 
 [反对本本主义](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/反对本本主义.md)
 
-#### 必须注意经济工作(1933.8.12)
+#### 必须注意经济工作(1933.08.12)
 
 [必须注意经济工作](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/必须注意经济工作.md)
 
@@ -72,11 +72,11 @@
 
 [怎样分析农村阶级](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/怎样分析农村阶级.md)
 
-#### 我们的经济政策(1934.1)
+#### 我们的经济政策(1934.01)
 
 [我们的经济政策](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/我们的经济政策.md)
 
-#### 关心群众生活，注意工作方法(1934.1.27)
+#### 关心群众生活，注意工作方法(1934.01.27)
 
 [关心群众生活，注意工作方法](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/关心群众生活，注意工作方法.md)
 
@@ -92,19 +92,19 @@
 
 [关于蒋介石声明的声明](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/关于蒋介石声明的声明.md)
 
-#### 中国共产党在抗日时期的任务(1937.5.3)
+#### 中国共产党在抗日时期的任务(1937.05.03)
 
 [中国共产党在抗日时期的任务](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国共产党在抗日时期的任务.md)
 
-#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.5.8)
+#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.05.08)
 
 [为争取千百万群众进入抗日民族统一战线而斗争](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/为争取千百万群众进入抗日民族统一战线而斗争.md)
 
-#### 实践论(1937.7)
+#### 实践论(1937.07)
 
 [实践论](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/实践论.md)
 
-#### 矛盾论(1937.8)
+#### 矛盾论(1937.08)
 
 [矛盾论](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/矛盾论.md)
 
@@ -112,9 +112,13 @@
 
 ### 抗日战争时期（上）(1937-1941)
 
-#### 反对日本进攻的方针、办法和前途(1937.7.23)
+#### 反对日本进攻的方针、办法和前途(1937.07.23)
 
 [反对日本进攻的方针、办法和前途](毛泽东选集(1-7卷静火版)/第二卷/抗日战争时期（上）/反对日本进攻的方针、办法和前途.md)
+
+#### 为动员一切力量争取抗战胜利而斗争(1937.08.25)
+
+[为动员一切力量争取抗战胜利而斗争](毛泽东选集(1-7卷静火版)/第二卷/抗日战争时期（上）/为动员一切力量争取抗战胜利而斗争.md)
 
 ## 第三卷
 
