--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -4,15 +4,15 @@
 
 ## 第一卷
 
-### 第一次国内革命战争时期(1924.1-1927.7)
+### 第一次国内革命战争时期(1924.01-1927.07)
 
-#### 中国社会各阶级的分析(1925.12.1)
+#### 中国社会各阶级的分析(1925.12.01)
 
 谁是我们的敌人？谁是我们的朋友？这个问题是革命的首要问题。中国过去一切革命斗争成效甚少，其基本原因就是因为不能团结真正的朋友，以攻击真正的敌人。革命党是群众的向导，在革命中未有革命党领错了路而革命不失败的。我们的革命要有不领错路和一定成功的把握，不可不注意团结我们的真正的朋友，以攻击我们的真正的敌人。我们要分辨真正的敌友，不可不将中国社会各阶级的经济地位及其对于革命的态度，作一个大概的分析。
 
 综上所述，可知一切勾结帝国主义的军阀、官僚、买办阶级、大地主阶级以及附属于他们的一部分反动知识界，是我们的敌人。工业无产阶级是我们革命的领导力量。一切半无产阶级、小资产阶级，是我们最接近的朋友。那动摇不定的中产阶级，其右翼可能是我们的敌人，其左翼可能是我们的朋友——但我们要时常提防他们，不要让他们扰乱了我们的阵线。
 
-#### 湖南农民运动考察报告(1927.3)
+#### 湖南农民运动考察报告(1927.03)
 
 很短的时间内，将有几万万农民从中国中部、南部和北部各省起来，其势如暴风骤雨，迅猛异常，无论什么大的力量都将压抑不住。他们将冲决一切束缚他们的罗网，朝着解放的路上迅跑。一切帝国主义、军阀、贪官污吏、土豪劣绅，都将被他们葬入坟墓。一切革命的党派、革命的同志，都将在他们面前受他们的检验而决定弃取。站在他们的前头领导他们呢？还是站在他们的后头指手画脚地批评他们呢？还是站在他们的对面反对他们呢？每个中国人对于这三项都有选择的自由，不过时局将强迫你迅速地选择罢了。
 
@@ -47,9 +47,9 @@
 [^1-1-2-18]: 这句话引自《孟子·尽心上》，大意是说善于教人射箭的人，引满了弓，却不射出去，只摆着跃跃欲动的姿势。毛泽东在这里是借来比喻共产党人应当善于教育和启发农民，使农民自觉地去破除迷信和其他不良的风俗习惯，而不是不顾农民的觉悟程度，靠发号施令代替农民去破除。
 [^1-1-2-27]: 叶公好龙，见汉朝刘向所作《新序·杂事》：“叶公子高好龙，钩以写龙，凿以写龙，屋室雕文以写龙。于是天龙闻而下之，窥头于牖，施尾于堂。叶公见之，弃而还走，失其魂魄，五色无主。是叶公非好龙也，好夫似龙而非龙者也。”毛泽东在这里用以比喻蒋介石辈口谈革命，实际上畏惧革命，反对革命。
 
-### 第二次国内革命战争时期(1927.8-1937)
+### 第二次国内革命战争时期(1927.08-1937)
 
-#### 中国的红色政权为什么能够存在？(1928.10.5)
+#### 中国的红色政权为什么能够存在？(1928.10.05)
 
 现在国民党新军阀的统治，依然是城市买办阶级和乡村豪绅阶级的统治，对外投降帝国主义，对内以新军阀代替旧军阀，对工农阶级的经济的剥削和政治的压迫比从前更加厉害。
 
@@ -117,7 +117,7 @@
 [^1-2-3-4]: 黄巢（？——八八四），曹州冤句（今山东菏泽）人，唐朝末年农民起义领袖。公元八七五年，即唐僖宗乾符二年，黄巢聚众响应王仙芝领导的起义。公元八七八年，王仙芝被杀后，黄巢收集王的余部，被推为领袖，号“冲天大将军”。他领导的起义队伍，曾经多次出山东流动作战，转战于山东、河南、安徽、江苏、湖北、湖南、江西、浙江、福建、广东、广西、陕西等省。公元八八○年，黄巢攻破潼关，不久占领长安，建立齐国，自称皇帝。后因内部分裂（大将朱温降唐），又受到李克用沙陀军及诸道军队的进攻，黄巢被迫退出长安，转入河南，由河南回到山东，于公元八八四年失败自杀。黄巢领导的农民战争持续了十年，是中国历史上有名的农民战争之一。它沉重地打击了当时的封建统治阶级，受到贫苦农民的拥护。由于黄巢起义军只是简单地进行流动的战争，没有建立过比较稳固的根据地，所以被封建统治者称为“流寇”。
 [^1-2-3-5]: 李闯即李自成（一六○六——一六四五），陕西米脂人，明朝末年农民起义领袖。一六二八年，即明思宗崇祯元年，陕西北部形成农民起义的潮流。李自成参加高迎祥的起义队伍，曾经由陕西入河南，到安徽，折回陕西。一六三六年高迎祥死，李自成被推为闯王。李自成在群众中的主要口号是“迎闯王，不纳粮”；同时他不准部下扰害群众，曾经提出“杀一人如杀我父，淫一妇如淫我母”的口号，来约束自己的部队。因此，拥护他的人很多，成为当时农民起义的主流之一。但他也没有建立过比较稳固的根据地，总是流动作战。他在被推为闯王后，率部入川，折回陕南，经湖北又入川，又经湖北入河南，旋占湖北襄阳、安陆等地，再经河南攻陕占西安，于一六四四年经山西攻入北京。不久，在明将吴三桂勾引清兵联合进攻下失败。
 
-#### 星星之火，可以燎原(1930.1.5)
+#### 星星之火，可以燎原(1930.01.05)
 
 也就会明白单纯的流动游击政策，不能完成促进全国革命高潮的任务，而朱德毛泽东式、方志敏[^1-2-4-1]式之有根据地的，有计划地建设政权的，深入土地革命的，扩大人民武装的路线是经由乡赤卫队、区赤卫大队、县赤卫总队[^1-2-4-2]、地方红军直至正规红军这样一套办法的，政权发展是波浪式地向前扩大的，等等的政策，无疑义地是正确的。必须这样，才能树立全国革命群众的信仰，如苏联之于全世界然。必须这样，才能给反动统治阶级以甚大的困难，动摇其基础而促进其内部的分解。也必须这样，才能真正地创造红军，成为将来大革命的主要工具。总而言之，必须这样，才能促进革命的高潮。
 
@@ -136,7 +136,7 @@
 [^1-2-4-1]: 方志敏（一八九九——一九三五），江西弋阳人，赣东北革命根据地和红军第十军的主要创建人。一九二二年加入中国社会主义青年团，一九二四年加入中国共产党，曾被增补为中国共产党第六届中央委员会委员。一九二八年一月，在江西的弋阳、横峰一带发动农民举行武装起义。一九二八年至一九三三年，领导起义的农民坚持游击战争，实行土地革命，建立红色政权，逐步地将农村革命根据地扩大到江西东北部和福建北部、安徽南部、浙江西部，将地方游击队发展为正规红军。一九三四年十一月，带领红军第十军团向皖南进军，继续执行抗日先遣队北上的任务。一九三五年一月，在同国民党军队作战中被捕。同年八月，在南昌英勇牺牲。
 [^1-2-4-2]:见本卷《中国的红色政权为什么能够存在？》注[9]。
 
-#### 反对本本主义(1930.5)
+#### 反对本本主义(1930.05)
 
 **没有调查，没有发言权**
 
@@ -177,7 +177,7 @@
 [^1-2-5-7]:这里所说的山头指江西、湖南边界的井冈山地区，平地指江西南部、福建西部地区。一九二九年一月，毛泽东、朱德率领红军第四军的主力，自井冈山出发，向江西南部、福建西部进军，开辟赣南、闽西两大革命根据地。
 [^1-2-5-8]:指一九二八年六月至七月召开的中国共产党第六次全国代表大会通过的各项决议案。一九二九年初，红军第四军前敌委员会曾经把这些决议案汇集印成单行本，发给红军和地方的党组织。
 
-#### 必须注意经济工作(1933.8.12)
+#### 必须注意经济工作(1933.08.12)
 
 革命战争的激烈发展，要求我们动员群众，立即开展经济战线上的运动，进行各项必要和可能的经济建设事业。
 
@@ -191,7 +191,7 @@
 
 军阀、官僚、土豪、劣绅是地主阶级的政治代表，是地主中特别凶恶者。
 
-#### 我们的经济政策(1934.1)
+#### 我们的经济政策(1934.01)
 
 我们的经济政策的原则，是进行一切可能的和必须的经济方面的建设，集中经济力量供给战争，同时极力改良民众的生活，巩固工农在经济方面的联合，保证无产阶级对于农民的领导，争取国营经济对私人经济的领导，造成将来发展到社会主义的前提。
 
@@ -211,7 +211,7 @@
 
 [^1-2-8-1]:农业生产在革命根据地建立的头一二年，往往有些下降，主要地是由于在分配土地期间，地权还没有确定，新的经济秩序还没有走上轨道，以致农民的生产情绪还有些波动。
 
-#### 关心群众生活，注意工作方法(1934.1.27)
+#### 关心群众生活，注意工作方法(1934.01.27)
 
 因为革命战争是群众的战争，只有动员群众才能进行战争，只有依靠群众才能进行战争。
 
@@ -435,7 +435,7 @@
 
 爱国有罪，冤狱遍于国中；卖国有赏，汉奸弹冠相庆。
 
-#### 中国共产党在抗日时期的任务(1937.5.3)
+#### 中国共产党在抗日时期的任务(1937.05.03)
 
 中国很久以来就是处在两种剧烈的基本的矛盾中——帝国主义和中国之间的矛盾，封建制度和人民大众之间的矛盾。
 
@@ -455,7 +455,7 @@
 
 陈独秀尾巴主义的复活是不能容许的，这是资产阶级改良主义在无产阶级队伍中的反映。降低党的立场，模糊党的面目，牺牲工农利益去适合资产阶级改良主义的要求，将必然引导革命趋于失败。
 
-#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.5.8)
+#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.05.08)
 
 和平实现与和平巩固是两件事。历史暂时地走回头路是可能的，和平发生波折是可能的，原因就在于日本帝国主义和汉奸亲日派的存在。
 
@@ -469,7 +469,7 @@
 
 对资产阶级的动摇和不彻底性的克服，依靠群众的力量和正确的政策，否则资产阶级将反过来克服无产阶级。
 
-#### 实践论(1937.7)
+#### 实践论(1937.07)
 
 首先，马克思主义者认为人类的生产活动是最基本的实践活动，是决定其他一切活动的东西。
 
@@ -523,7 +523,7 @@
 
 [^1-2-15-10]:见斯大林《论列宁主义基础》第三部分《理论》。新的译文是：“离开革命实践的理论是空洞的理论，而不以革命理论为指南的实践是盲目的实践。”（《斯大林选集》上卷，人民出版社1979年版，第199—200页）
 
-#### 矛盾论(1937.8)
+#### 矛盾论(1937.08)
 
 事物的矛盾法则，即对立统一的法则，是唯物辩证法的最根本的法则。
 
@@ -617,11 +617,15 @@
 
 ### 抗日战争时期（上）(1937-1941)
 
-#### 反对日本进攻的方针、办法和前途
+#### 反对日本进攻的方针、办法和前途(1937.07.23)
 
 一九三七年七月七日，日本帝国主义发动了卢沟桥事变，企图以武力吞并全中国。全国人民一致要求对日作战。蒋介石迟迟至事变后十日才在庐山发表谈话，确定了准备对日抗战的方针。这是由于全国人民的压力，同时也由于日本帝国主义的行动已严重地打击了英美帝国主义在中国的利益和蒋介石所直接代表的大地主大资产阶级的利益。但就在这时，蒋介石政府仍然同日本继续谈判，甚至接受日本同中国地方当局议定所谓和平解决的办法。一直到八月十三日日军大举进攻上海，蒋介石在东南的统治地位已无法维持，才被迫实行抗战。但在这以后，直到一九四四年，蒋介石同日本的秘密谋和活动，始终没有停止。
 
 穷是错误办法产生出来的，在有了合乎人民利益的新政策之后决不会穷。如此广土众民的国家而说财政经济无办法，真是没有道理的话。
+
+#### 为动员一切力量争取抗战胜利而斗争(1937.08.25)
+
+
 
 ## 第三卷
 
