--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -120,6 +120,10 @@
 
 [为动员一切力量争取抗战胜利而斗争](毛泽东选集(1-7卷静火版)/第二卷/抗日战争时期（上）/为动员一切力量争取抗战胜利而斗争.md)
 
+#### 反对自由主义(1937.09.07)
+
+[反对自由主义](毛泽东选集(1-7卷静火版)/第二卷/抗日战争时期（上）/反对自由主义.md)
+
 ## 第三卷
 
 ### 抗日战争时期（下）(1937-1945)
