--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -625,6 +625,10 @@
 
 #### 为动员一切力量争取抗战胜利而斗争(1937.08.25)
 
+单纯的政府抗战只能取得某些个别的胜利，要彻底地战胜日寇是不可能的。只有全面的民族抗战才能彻底地战胜日寇。
+
+#### 反对自由主义(1937.09.07)
+
 
 
 ## 第三卷
