--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -2463,7 +2463,7 @@
 
 （甲）七月七日卢沟桥事变，是日本帝国主义大举进攻中国本部的开始。卢沟桥中国军队的抗战，是中国全国性抗战的开始。由于日寇无底止的进攻，全国人民的坚决斗争，民族资产阶级的倾向抗日，中国共产党抗日民族统一战线政策的努力提倡、坚决实行和取得全国的赞助，使得“九一八”[^2-1-2-1]以来中国统治当局的对日不抵抗政策，在卢沟桥事变后开始转变到实行抗战的政策，使得一二九运动[^2-1-2-2]以来中国革命发展的形势，由停止内战准备抗战的阶段，过渡到了实行抗战的阶段。以西安事变[^2-1-2-3]和国民党三中全会[^2-1-2-4]为起点的国民党政策上的开始转变，以及蒋介石先生七月十七日在庐山关于抗日的谈话，和他在国防上的许多措施，是值得赞许的。所有前线的军队，不论陆军、空军和地方部队，都进行了英勇的抗战，表示了中华民族的英雄气概。中国共产党谨以无上的热忱，向所有全国的爱国军队爱国同胞致民族革命的敬礼。
 
-（乙）但在另一方面，在七月七日卢沟桥事变以后，国民党当局又依然继续其“九一八”以来所实行的错误政策，进行了妥协和让步[^2-1-2-5]，压制了爱国军队的积极性，压制了爱国人民的救国运动。日本帝国主义在夺取平津之后，依靠其野蛮的武力，借助德意帝国主义的声援，利用英帝国主义的动摇，利用中国国民党对于广大劳动民众的隔离，毫无疑义将继续坚持其大规模进攻的方针，实行第二步、第三步的预定的作战计划，向着整个华北及其他各地作猛烈的进攻。察哈尔[^2-1-2-6]、上海等地的烽火已经燃烧起来了。为了挽救祖国的危亡，抵御强寇的进攻，保卫华北和沿海，收复平津和东北，全国人民和国民党当局必须深切地认识东北平津丧失的教训，认识阿比西尼亚亡国的覆辙[^2-1-2-7]，认识苏联过去战胜外敌的历史[^2-1-2-8]，认识西班牙现在胜利地保卫马德里[^2-1-2-9]的经验，坚固地团结起来，为保卫祖国而作战到底。今后的任务是“动员一切力量争取抗战胜利”，这里的关键是国民党政策的全部的和彻底的转变。国民党在抗战问题上的进步是值得赞扬的，这是中国共产党和全国人民所多年企望的，我们欢迎这种进步。然而国民党政策在发动民众和改革政治等问题上依然没有什么转变，对人民抗日运动基本上依然不肯开放，对政府机构依然不愿作原则的改变，对人民生活依然没有改良的方针，对共产党关系也没有进到真诚合作的程度。在如此的亡国灭种的紧急关头，国民党如果还因循上述的政策不愿迅速改变，将使抗日战争蒙受绝大的不利。有些国民党人说：待抗战胜利后再实行政治改革吧。他们以为单纯的政府抗战便可以战胜日寇，这是错误的。单纯的政府抗战只能取得某些个别的胜利，要彻底213地战胜日寇是不可能的。只有全面的民族抗战才能彻底地战胜日寇。然而要实现全面的民族抗战，必须国民党政策有全部的和彻底的转变，必须全国上下共同实行一个彻底抗日的纲领，这就是根据第一次国共合作时孙中山先生所手订的革命的三民主义和三大政策的精神而提出的救国纲领。
+（乙）但在另一方面，在七月七日卢沟桥事变以后，国民党当局又依然继续其“九一八”以来所实行的错误政策，进行了妥协和让步[^2-1-2-5]，压制了爱国军队的积极性，压制了爱国人民的救国运动。日本帝国主义在夺取平津之后，依靠其野蛮的武力，借助德意帝国主义的声援，利用英帝国主义的动摇，利用中国国民党对于广大劳动民众的隔离，毫无疑义将继续坚持其大规模进攻的方针，实行第二步、第三步的预定的作战计划，向着整个华北及其他各地作猛烈的进攻。察哈尔[^2-1-2-6]、上海等地的烽火已经燃烧起来了。为了挽救祖国的危亡，抵御强寇的进攻，保卫华北和沿海，收复平津和东北，全国人民和国民党当局必须深切地认识东北平津丧失的教训，认识阿比西尼亚亡国的覆辙[^2-1-2-7]，认识苏联过去战胜外敌的历史[^2-1-2-8]，认识西班牙现在胜利地保卫马德里[^2-1-2-9]的经验，坚固地团结起来，为保卫祖国而作战到底。今后的任务是“动员一切力量争取抗战胜利”，这里的关键是国民党政策的全部的和彻底的转变。国民党在抗战问题上的进步是值得赞扬的，这是中国共产党和全国人民所多年企望的，我们欢迎这种进步。然而国民党政策在发动民众和改革政治等问题上依然没有什么转变，对人民抗日运动基本上依然不肯开放，对政府机构依然不愿作原则的改变，对人民生活依然没有改良的方针，对共产党关系也没有进到真诚合作的程度。在如此的亡国灭种的紧急关头，国民党如果还因循上述的政策不愿迅速改变，将使抗日战争蒙受绝大的不利。有些国民党人说：待抗战胜利后再实行政治改革吧。他们以为单纯的政府抗战便可以战胜日寇，这是错误的。单纯的政府抗战只能取得某些个别的胜利，要彻底地战胜日寇是不可能的。只有全面的民族抗战才能彻底地战胜日寇。然而要实现全面的民族抗战，必须国民党政策有全部的和彻底的转变，必须全国上下共同实行一个彻底抗日的纲领，这就是根据第一次国共合作时孙中山先生所手订的革命的三民主义和三大政策的精神而提出的救国纲领。
 
 （丙）中国共产党以满腔的热忱向中国国民党、全国人民、全国各党各派各界各军提出彻底战胜日寇的十大救国纲领。中国共产党坚决相信，只有完全地、诚意地和坚决地执行这个纲领，才能达到保卫祖国战胜日寇之目的。否则，因循坐误，责有攸归；全国丧亡，嗟悔无及。十大救国纲领如下：
 
@@ -2581,6 +2581,58 @@
 [^2-1-2-7]: 参见本书第一卷《中国共产党在抗日时期的任务》第八节。
 [^2-1-2-8]: 参见本书第一卷《论反对日本帝国主义的策略》注[29]。
 [^2-1-2-9]: 马德里是西班牙的首都。一九三六年七月，德意法西斯支持西班牙佛朗哥法西斯势力发动叛乱，并武装干涉西班牙内政。西班牙人民在人民阵线政府领导之下，进行了保卫民主反对侵略的英勇抗战。这个战争，以马德里的保卫战最为激烈。保卫马德里的战争，从一九三六年十月起，前后坚持两年又五个月的时间。由于英法等帝国主义国家用虚伪的所谓“不干涉”政策帮助侵略者，又由于人民阵线内部发生了分化，马德里在一九三九年三月陷落。
+
+
+
+#### 反对自由主义(1937.09.07)
+
+**反对自由主义**
+
+（一九三七年九月七日）
+
+我们主张积极的思想斗争，因为它是达到党内和革命团体内的团结使之利于战斗的武器。每个共产党员和革命分子，应该拿起这个武器。
+
+但是自由主义取消思想斗争，主张无原则的和平，结果是腐朽庸俗的作风发生，使党和革命团体的某些组织和某些个人在政治上腐化起来。
+
+自由主义有各种表现。
+
+因为是熟人、同乡、同学、知心朋友、亲爱者、老同事、老部下，明知不对，也不同他们作原则上的争论，任其下去，求得和平和亲热。或者轻描淡写地说一顿，不作彻底解决，保持一团和气。结果是有害于团体，也有害于个人。这是第一种。
+
+不负责任的背后批评，不是积极地向组织建议。当面不说，背后乱说；开会不说，会后乱说。心目中没有集体生活的原则，只有自由放任。这是第二种。
+
+事不关己，高高挂起；明知不对，少说为佳；明哲保身，但求无过。这是第三种。
+
+命令不服从，个人意见第一。只要组织照顾，不要组织纪律。这是第四种。
+
+不是为了团结，为了进步，为了把事情弄好，向不正确的意见斗争和争论，而是个人攻击，闹意气，泄私愤，图报复。这是第五种。
+
+听了不正确的议论也不争辩，甚至听了反革命分子的话也不报告，泰然处之，行若无事。这是第六种。
+
+见群众不宣传，不鼓动，不演说，不调查，不询问，不关心其痛痒，漠然置之，忘记了自己是一个共产党员，把一个共产党员混同于一个普通的老百姓。这是第七种。
+
+见损害群众利益的行为不愤恨，不劝告，不制止，不解释，听之任之。这是第八种。
+
+办事不认真，无一定计划，无一定方向，敷衍了事，得过且过，做一天和尚撞一天钟。这是第九种。
+
+自以为对革命有功，摆老资格，大事做不来，小事又不做，工作随便，学习松懈。这是第十种。
+
+自己错了，也已经懂得，又不想改正，自己对自己采取自由主义。这是第十一种。
+
+还可以举出一些。主要的有这十一种。
+
+所有这些，都是自由主义的表现。
+
+革命的集体组织中的自由主义是十分有害的。它是一种腐蚀剂，使团结涣散，关系松懈，工作消极，意见分歧。它使革命队伍失掉严密的组织和纪律，政策不能贯彻到底，党的组织和党所领导的群众发生隔离。这是一种严重的恶劣倾向。
+
+自由主义的来源，在于小资产阶级的自私自利性，以个人利益放在第一位，革命利益放在第二位，因此产生思想上、政治上、组织上的自由主义。
+
+自由主义者以抽象的教条看待马克思主义的原则。他们赞成马克思主义，但是不准备实行之，或不准备完全实行之，不准备拿马克思主义代替自己的自由主义。这些人，马克思主义是有的，自由主义也是有的：说的是马克思主义，行的是自由主义；对人是马克思主义，对己是自由主义。两样货色齐备，各有各的用处。这是一部分人的思想方法。
+
+自由主义是机会主义的一种表现，是和马克思主义根本冲突的。它是消极的东西，客观上起着援助敌人的作用，因此敌人是欢迎我们内部保存自由主义的。自由主义的性质如此，革命队伍中不应该保留它的地位。
+
+我们要用马克思主义的积极精神，克服消极的自由主义。一个共产党员，应该是襟怀坦白，忠实，积极，以革命利益为第一生命，以个人利益服从革命利益；无论何时何地，坚持正确的原则，同一切不正确的思想和行为作不疲倦的斗争，用以巩固党的集体生活，巩固党和群众的联系；关心党和群众比关心个人为重，关心他人比关心自己为重。这样才算得一个共产党员。
+
+一切忠诚、坦白、积极、正直的共产党员团结起来，反对一部分人的自由主义的倾向，使他们改变到正确的方面来。这是思想战线的任务之一。
 
 ## 第三卷
 
