--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -124,6 +124,10 @@
 
 [反对自由主义](毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/反对自由主义.md)
 
+#### 国共合作成立后的迫切任务(1937.09.29)
+
+[国共合作成立后的迫切任务](毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/国共合作成立后的迫切任务.md)
+
 ## 第三卷
 
 ### 抗日战争时期（下）(1937-1945)
