--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -629,6 +629,44 @@
 
 #### 反对自由主义(1937.09.07)
 
+但是自由主义取消思想斗争，主张无原则的和平，结果是腐朽庸俗的作风发生，使党和革命团体的某些组织和某些个人在政治上腐化起来。
+
+自由主义有各种表现。
+
+因为是熟人、同乡、同学、知心朋友、亲爱者、老同事、老部下，明知不对，也不同他们作原则上的争论，任其下去，求得和平和亲热。或者轻描淡写地说一顿，不作彻底解决，保持一团和气。结果是有害于团体，也有害于个人。这是第一种。
+
+不负责任的背后批评，不是积极地向组织建议。当面不说，背后乱说；开会不说，会后乱说。心目中没有集体生活的原则，只有自由放任。这是第二种。
+
+事不关己，高高挂起；明知不对，少说为佳；明哲保身，但求无过。这是第三种。
+
+命令不服从，个人意见第一。只要组织照顾，不要组织纪律。这是第四种。
+
+不是为了团结，为了进步，为了把事情弄好，向不正确的意见斗争和争论，而是个人攻击，闹意气，泄私愤，图报复。这是第五种。
+
+听了不正确的议论也不争辩，甚至听了反革命分子的话也不报告，泰然处之，行若无事。这是第六种。
+
+见群众不宣传，不鼓动，不演说，不调查，不询问，不关心其痛痒，漠然置之，忘记了自己是一个共产党员，把一个共产党员混同于一个普通的老百姓。这是第七种。
+
+见损害群众利益的行为不愤恨，不劝告，不制止，不解释，听之任之。这是第八种。
+
+办事不认真，无一定计划，无一定方向，敷衍了事，得过且过，做一天和尚撞一天钟。这是第九种。
+
+自以为对革命有功，摆老资格，大事做不来，小事又不做，工作随便，学习松懈。这是第十种。
+
+自己错了，也已经懂得，又不想改正，自己对自己采取自由主义。这是第十一种。
+
+还可以举出一些。主要的有这十一种。
+
+所有这些，都是自由主义的表现。
+
+自由主义的来源，在于小资产阶级的自私自利性，以个人利益放在第一位，革命利益放在第二位，因此产生思想上、政治上、组织上的自由主义。
+
+自由主义者以抽象的教条看待马克思主义的原则。他们赞成马克思主义，但是不准备实行之，或不准备完全实行之，不准备拿马克思主义代替自己的自由主义。这些人，马克思主义是有的，自由主义也是有的：说的是马克思主义，行的是自由主义；对人是马克思主义，对己是自由主义。两样货色齐备，各有各的用处。这是一部分人的思想方法。
+
+自由主义是机会主义的一种表现，是和马克思主义根本冲突的。它是消极的东西，客观上起着援助敌人的作用，因此敌人是欢迎我们内部保存自由主义的。自由主义的性质如此，革命队伍中不应该保留它的地位。
+
+#### 国共合作成立后的迫切任务(1937.09.29)
+
 
 
 ## 第三卷
