--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -667,7 +667,13 @@
 
 #### 国共合作成立后的迫切任务(1937.09.29)
 
+他们以为共产主义和三民主义是不能并存的。这是一种形式主义的观察。共产主义是在革命发展的将来阶段实行的，共产主义者在现在阶段并不梦想实行共产主义，而是要实行历史规定的民族革命主义和民主革命主义，这是共产党提出抗日民族统一战线和统一的民主共和国的根本理由。
 
+共产党没有一天不在反对帝国主义，这就是彻底的民族主义；工农民主专政制度也不是别的，就是彻底的民权主义；土地革命则是彻底的民生主义。
+
+为什么共产党现在又申明取消工农民主专政和停止没收地主的土地呢？这个理由我们也早已说明了，不是这种制度和办法根本要不得，而是日本帝国主义的武装侵略引起了国内阶级关系的变化，使联合全民族各阶层反对日本帝国主义成了必需，而且有了可能。
+
+实行“耕者有其田”的土地革命，正是孙中山先生曾经提出过的政策；我们今天停止实行这个政策，是为了团结更多的人去反对日本帝国主义，而不是说中国不要解决土地问题。
 
 ## 第三卷
 
