--- a/毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/国共合作成立后的迫切任务.md
+++ b/毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/国共合作成立后的迫切任务.md
@@ -20,7 +20,7 @@
 
 共同纲领是什么呢？这就是孙中山先生的三民主义和共产党在八月二十五日提出的抗日救国十大纲领[^10]。
 
-中国共产党在公布国共合作的宣言上说：“孙中山先生的三民主义为中国今日之必需，本党愿为其彻底实现而奋斗。”若干人们对于共产党愿意实行国民党的三民主义觉得奇怪，如像上海的诸青来[^11]，就是在上海的刊物上提出这种疑问的一个。他们以为共产主义和三民主义是不能并存的。这是一种形式主义的观察。共产主义是在革命发展的将来阶段实行的，共产主义者在现在阶段并不梦想实行共产主义，而是要实行历史规定的民族革命主义和民主革命主义，这是共产党提出抗日民族统一战线和统一的民主共和国的根本理由。说到三民主义，还在十年前两党的第一次统一战线时，共产党和国民党就已经经过国民党第一次全国代表大会而共同决定加以实行，并且已经在一九二四年至一九二七年，经过每一个忠实的共产党人和每一个忠实的国民党人的手，在全国很大的地区中实行过了。不幸在一九二七年统一战线破裂，从此产生了国民党方面十年来反对实行三民主义的局面。然而在共产党方面，十年来所实行的一切政策，根本上仍然是符合于孙中山先生的三民主义和三大政策的革命精神的。共产党没有一天不在反对帝国主义，这就是彻底的民族主义；工农民主专政制度也不是别的，就是彻底的民权主义；土地革命则是彻底的民生主义。为什么共产党现在又申明取消工农民主专政和停止没收地主的土地呢？这个理由我们也早已说明了，不是这种制度和办法根本要不得，而是日本帝国主义的武装侵略引起了国内阶级关系的变化，使联合全民族各阶层反对日本帝国主义成了必需，而且有了可能。不但在中国，而且在世界范围内，为了共同反对法西斯，建立反法西斯的统一战线也有了必需和可能。所以，我们主张在中国建立民族的和民主的统一战线。我们用以代替工农民主专政的各阶层联合的民主共和国的主张，是在这种基础之上提出的。实行“耕者有其田”的土地革命，正是孙中山先生曾经提出过的政策；我们今天停止实行这个政策，是为了团结更多的人去反对日本帝国主义，而不是说中国不要解决土地问题。关于这种政策改变的客观原因和时间性，我们曾经毫不含糊地说明了自己的观点。正是因为中国共产党根据马克思主义的原则，一贯地坚持了并发展了第一次国共统一战线的共同纲领即革命的三民主义，所以共产党能于强寇压境民族危急之际，及时地提出民族民主的统一战线这种唯一能够挽救危亡的政策，并且不疲倦地实行之。现在的问题，不是共产党信仰不信仰实行不实行革命的三民主义的问题，反而是国民党信仰不信仰实行不实行革命的三民主义的问题。现在的任务，是在全国范围内恢复孙中山先生的三民主义的革命精神，据以定出一定的政纲和政策，并真正而不二心地、切实而不敷衍地、迅速而不推延地实行起来，这在中国共产党方面真是日夜馨香祷祝之的。为此，共产党在卢沟桥事变之后，提出了抗日救国的十大纲领。这个十大纲领，符合于马克思主义，也符合于真正革命的三民主义。这是现阶段中国革命即抗日民族革命战争中的初步的纲领，只有实行了它，才能挽救中国。一切和这个纲领相抵触的东西，如果还要继续下去，就会要受到历史的惩罚。
+中国共产党在公布国共合作的宣言上说：“孙中山先生的三民主义为中国今日之必需，本党愿为其彻底实现而奋斗。”若干人们对于共产党愿意实行国民党的三民主义觉得奇怪，如像上海的诸青来[^11]，就是在上海的刊物上提出这种疑问的一个。**他们以为共产主义和三民主义是不能并存的。这是一种形式主义的观察。共产主义是在革命发展的将来阶段实行的，共产主义者在现在阶段并不梦想实行共产主义，而是要实行历史规定的民族革命主义和民主革命主义，这是共产党提出抗日民族统一战线和统一的民主共和国的根本理由。**说到三民主义，还在十年前两党的第一次统一战线时，共产党和国民党就已经经过国民党第一次全国代表大会而共同决定加以实行，并且已经在一九二四年至一九二七年，经过每一个忠实的共产党人和每一个忠实的国民党人的手，在全国很大的地区中实行过了。不幸在一九二七年统一战线破裂，从此产生了国民党方面十年来反对实行三民主义的局面。然而在共产党方面，十年来所实行的一切政策，根本上仍然是符合于孙中山先生的三民主义和三大政策的革命精神的。**共产党没有一天不在反对帝国主义，这就是彻底的民族主义；工农民主专政制度也不是别的，就是彻底的民权主义；土地革命则是彻底的民生主义。为什么共产党现在又申明取消工农民主专政和停止没收地主的土地呢？这个理由我们也早已说明了，不是这种制度和办法根本要不得，而是日本帝国主义的武装侵略引起了国内阶级关系的变化，使联合全民族各阶层反对日本帝国主义成了必需，而且有了可能。**不但在中国，而且在世界范围内，为了共同反对法西斯，建立反法西斯的统一战线也有了必需和可能。所以，我们主张在中国建立民族的和民主的统一战线。我们用以代替工农民主专政的各阶层联合的民主共和国的主张，是在这种基础之上提出的。**实行“耕者有其田”的土地革命，正是孙中山先生曾经提出过的政策；我们今天停止实行这个政策，是为了团结更多的人去反对日本帝国主义，而不是说中国不要解决土地问题。**关于这种政策改变的客观原因和时间性，我们曾经毫不含糊地说明了自己的观点。正是因为中国共产党根据马克思主义的原则，一贯地坚持了并发展了第一次国共统一战线的共同纲领即革命的三民主义，所以共产党能于强寇压境民族危急之际，及时地提出民族民主的统一战线这种唯一能够挽救危亡的政策，并且不疲倦地实行之。现在的问题，不是共产党信仰不信仰实行不实行革命的三民主义的问题，反而是国民党信仰不信仰实行不实行革命的三民主义的问题。现在的任务，是在全国范围内恢复孙中山先生的三民主义的革命精神，据以定出一定的政纲和政策，并真正而不二心地、切实而不敷衍地、迅速而不推延地实行起来，这在中国共产党方面真是日夜馨香祷祝之的。为此，共产党在卢沟桥事变之后，提出了抗日救国的十大纲领。这个十大纲领，符合于马克思主义，也符合于真正革命的三民主义。这是现阶段中国革命即抗日民族革命战争中的初步的纲领，只有实行了它，才能挽救中国。一切和这个纲领相抵触的东西，如果还要继续下去，就会要受到历史的惩罚。
 
 这个纲领之在全国范围内实行，不得到国民党同意是不可能的，因为国民党现在还是中国的最大的握有统治权的政党。我们相信，那些贤明的国民党人会有一天同意这个纲领的。因为如果不同意的话，三民主义就始终是一句空话，孙中山先生的革命精神就不能恢复，日本帝国主义就不能战胜，中国人民的亡国奴境遇就无可避免。真正贤明的国民党人是决不愿意这样的，全国人民也决不会眼看着尽当亡国奴。而况蒋介石先生在其九月二十三日的谈话中已经指出：“余以为吾人革命所争者，不在个人之意气与私见，而为三民主义之实现。在存亡危急之秋，更不应计较过去之一切，而当与全国国民彻底更始，力谋团结，以保国家之生命与生存。”这是很对的。现在的急务在谋三民主义的实现，放弃个人和小集团的私见，改变过去的老一套，立即实行符合于三民主义的革命纲领，彻底地与民更始。这是今天的唯一的道路。再要推延，就会悔之无及了。
 
