--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -128,6 +128,10 @@
 
 [国共合作成立后的迫切任务](毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/国共合作成立后的迫切任务.md)
 
+#### 和英国记者贝特兰的谈话(1937.10.25)
+
+[和英国记者贝特兰的谈话](毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/和英国记者贝特兰的谈话.md)
+
 ## 第三卷
 
 ### 抗日战争时期（下）(1937-1945)
