--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -675,6 +675,20 @@
 
 实行“耕者有其田”的土地革命，正是孙中山先生曾经提出过的政策；我们今天停止实行这个政策，是为了团结更多的人去反对日本帝国主义，而不是说中国不要解决土地问题。
 
+#### 和英国记者贝特兰的谈话(1937.10.25)
+
+我们不反对使用一部分兵力于正面，这是必要的。但主力必须使用于侧面，采取包围迂回战法，独立自主地攻击敌人，才能保存自己的力量，消灭敌人的力量。再则使用若干兵力于敌人后方，其威力特别强大，因为捣乱了敌人的运输线和根据地。就是在正面作战的军队，也不可用单纯防御的战法，主要应采取“反突击”。
+
+军事上的第一要义是保存自己消灭敌人，而要达到此目的，必须采用独立自主的游击战和运动战，避免一切被动的呆板的战法。
+
+八路军更有一种极其重要和极其显著的东西，这就是它的政治工作。八路军的政治工作的基本原则有三个，即：第一、官兵一致的原则，这就是在军队中肃清封建主义，废除打骂制度，建立自觉纪律，实行同甘共苦的生活，因此全军是团结一致的。第二、军民一致的原则，这就是秋毫无犯的民众纪律，宣传、组织和武装民众，减轻民众的经济负担，打击危害军民的汉奸卖国贼，因此军民团结一致，到处得到人民的欢迎。第三、瓦解敌军和宽待俘虏的原则。我们的胜利不但是依靠我军的作战，而且依靠敌军的瓦解。瓦解敌军和宽待俘虏的办法虽然目前收效尚未显著，但在将来必定会有成效的。此外，从第二个原则出发，八路军的补充不采取强迫人民的方式，而采取鼓动人民上前线的方式，这个办法较之强迫的办法收效大得多。
+
+民主和集中之间，并没有不可越过的深沟，对于中国，二者都是必需的。一方面，我们所要求的政府，必须是能够真正代表民意的政府；这个政府一定要有全中国广大人民群众的支持和拥护，人民也一定要能够自由地去支持政府，和有一切机会去影响政府的政策。这就是民主制的意义。另一方面，行政权力的集中化是必要的；当人民要求的政策一经通过民意机关而交付与自己选举的政府的时候，即由政府去执行，只要执行时不违背曾经民意通过的方针，其执行必能顺利无阻。这就是集中制的意义。只有采取民主集中制，政府的力量才特别强大，抗日战争中国防性质的政府必定要采取这种民主集中制。
+
+政府和人民在战争中的不一致，就产生了只要集中不要民主的绝对集中主义的政府。可是历史上还有革命的战争，例如法国的革命战争、俄国的革命战争、目前西班牙的革命战争。在这一类的战争中，政府不怕人民不赞成战争，因为人民极愿意进行这种战争；政府的基础建设在人民的自愿支持之上，所以政府不但不惧怕人民，而且必须唤起人民，引导人民发表意见，以便积极地参加战争。中国的民族解放战争是人民完全同意的，战争的进行没有人民参加又是不能胜利的，因此民主集中制成为必要。中国一九二六年到一九二七年的北伐战争，也是依靠民主集中制取得了胜利。由此可见，如果战争的目的是直接代表着人民利益的时候，政府越民主，战争就越好进行。这样的政府就不应畏惧人民反对战争，相反，这个政府所顾虑的，应是人民的不起来和对于战争的冷淡。战争的性质决定政府和人民的关系，这是一个历史的原则。
+
+
+
 ## 第三卷
 
 ### 抗日战争时期（下）(1937-1945)
