--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -687,6 +687,8 @@
 
 政府和人民在战争中的不一致，就产生了只要集中不要民主的绝对集中主义的政府。可是历史上还有革命的战争，例如法国的革命战争、俄国的革命战争、目前西班牙的革命战争。在这一类的战争中，政府不怕人民不赞成战争，因为人民极愿意进行这种战争；政府的基础建设在人民的自愿支持之上，所以政府不但不惧怕人民，而且必须唤起人民，引导人民发表意见，以便积极地参加战争。中国的民族解放战争是人民完全同意的，战争的进行没有人民参加又是不能胜利的，因此民主集中制成为必要。中国一九二六年到一九二七年的北伐战争，也是依靠民主集中制取得了胜利。由此可见，如果战争的目的是直接代表着人民利益的时候，政府越民主，战争就越好进行。这样的政府就不应畏惧人民反对战争，相反，这个政府所顾虑的，应是人民的不起来和对于战争的冷淡。战争的性质决定政府和人民的关系，这是一个历史的原则。
 
+#### 上海太原失陷以后抗日战争的形势和任务(1937.11.12)
+
 
 
 ## 第三卷
