--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -132,6 +132,10 @@
 
 [和英国记者贝特兰的谈话](毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/和英国记者贝特兰的谈话.md)
 
+#### 上海太原失陷以后抗日战争的形势和任务(1937.11.12)
+
+[上海太原失陷以后抗日战争的形势和任务](毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/上海太原失陷以后抗日战争的形势和任务.md)
+
 ## 第三卷
 
 ### 抗日战争时期（下）(1937-1945)
