--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -689,7 +689,11 @@
 
 #### 上海太原失陷以后抗日战争的形势和任务(1937.11.12)
 
+如能在半年到一年内建立二十五万到三十万具有新的政治精神的军队，则抗日战场上必能开始看到转机。这种新军将影响并团结一切旧军。这是抗日战争转入战略反攻的军事基础。
 
+为了坚持抗战和争取最后胜利，为了变片面抗战为全面抗战，必须坚持抗日民族统一战线的路线，必须扩大和巩固统一战线。任何破裂国共两党的统一战线的主张是不许可的。“左”倾关门主义仍然要防止。但是在同时，在一切统一战线工作中必须密切地联系到独立自主的原则。我们和国民党及其他任何派别的统一战线，是在实行一定纲领这个基础上面的统一战线。离开了这个基础，就没有任何的统一战线，这样的合作就变成无原则的行动，就是投降主义的表现了。因此，“统一战线中的独立自主”这个原则的说明、实践和坚持，是把抗日民族革命战争引向胜利之途的中心一环。
+
+在抗日民族革命战争中，阶级投降主义实际上是民族投降主义的后备军，是援助右翼营垒而使战争失败的最恶劣的倾向。为了争取中华民族和劳动群众的解放，为了使反对民族投降主义的斗争坚决有力，必须反对共产党内部和无产阶级内部的阶级的投降倾向，要使这一斗争开展于各方面的工作中。
 
 ## 第三卷
 
