--- a/毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/上海太原失陷以后抗日战争的形势和任务.md
+++ b/毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/上海太原失陷以后抗日战争的形势和任务.md
@@ -64,7 +64,7 @@
 
 （十四）改造政府。我们提出了召集临时国民大会的方针，这也是必要的和可能的。这一改造也无疑须得到国民党的同意。
 
-（十五）改造军队的任务是建立新军和改造旧军。如能在半年到一年内建立二十五万到三十万具有新的政治精神的军队，则抗日战场上必能开始看到转机。这种新军将影响并团结一切旧军。这是抗日战争转入战略反攻的军事基础。这一改造，同样须得到国民党的同意。八路军应在这一改造过程中起模范作用。八路军本身应该扩大。
+（十五）改造军队的任务是建立新军和改造旧军。**如能在半年到一年内建立二十五万到三十万具有新的政治精神的军队，则抗日战场上必能开始看到转机。这种新军将影响并团结一切旧军。这是抗日战争转入战略反攻的军事基础。**这一改造，同样须得到国民党的同意。八路军应在这一改造过程中起模范作用。八路军本身应该扩大。
 
 ## 二　在党内在全国均须反对投降主义
 
@@ -102,7 +102,7 @@
 
 在《解放周刊》[^15]，坚持了严正的批评态度。
 
-（二十二）为了坚持抗战和争取最后胜利，为了变片面抗战为全面抗战，必须坚持抗日民族统一战线的路线，必须扩大和巩固统一战线。任何破裂国共两党的统一战线的主张是不许可的。“左”倾关门主义仍然要防止。但是在同时，在一切统一战线工作中必须密切地联系到独立自主的原则。我们和国民党及其他任何派别的统一战线，是在实行一定纲领这个基础上面的统一战线。离开了这个基础，就没有任何的统一战线，这样的合作就变成无原则的行动，就是投降主义的表现了。因此，“统一战线中的独立自主”这个原则的说明、实践和坚持，是把抗日民族革命战争引向胜利之途的中心一环。
+（二十二）**为了坚持抗战和争取最后胜利，为了变片面抗战为全面抗战，必须坚持抗日民族统一战线的路线，必须扩大和巩固统一战线。任何破裂国共两党的统一战线的主张是不许可的。“左”倾关门主义仍然要防止。但是在同时，在一切统一战线工作中必须密切地联系到独立自主的原则。我们和国民党及其他任何派别的统一战线，是在实行一定纲领这个基础上面的统一战线。离开了这个基础，就没有任何的统一战线，这样的合作就变成无原则的行动，就是投降主义的表现了。因此，“统一战线中的独立自主”这个原则的说明、实践和坚持，是把抗日民族革命战争引向胜利之途的中心一环。**
 
 （二十三）我们这样做的目的何在呢？一方面是在保持自己已经取得的阵地。这是我们的战略出发地，丧失了这个阵地就一切无从说起了。但是主要的目的还在另一方面，这就是为了发展阵地，为了实现“动员千百万群众进入抗日民族统一战线，打倒日本帝国主义”这个积极的目的。保持阵地和发展阵地是不可分离的。几个月来，更广大的小资产阶级的左翼群众是在我们的影响下团结起来了，国民党营垒中的新生力量是在增长中，山西的群众斗争是发展了，党的组织在许多地方也发展了。
 
@@ -122,7 +122,7 @@
 
 ### 阶级投降主义和民族投降主义的关系
 
-（二十九）在抗日民族革命战争中，阶级投降主义实际上是民族投降主义的后备军，是援助右翼营垒而使战争失败的最恶劣的倾向。为了争取中华民族和劳动群众的解放，为了使反对民族投降主义的斗争坚决有力，必须反对共产党内部和无产阶级内部的阶级的投降倾向，要使这一斗争开展于各方面的工作中。
+（二十九）**在抗日民族革命战争中，阶级投降主义实际上是民族投降主义的后备军，是援助右翼营垒而使战争失败的最恶劣的倾向。为了争取中华民族和劳动群众的解放，为了使反对民族投降主义的斗争坚决有力，必须反对共产党内部和无产阶级内部的阶级的投降倾向，要使这一斗争开展于各方面的工作中。**
 
 ## 注释
 
