--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -136,6 +136,10 @@
 
 [上海太原失陷以后抗日战争的形势和任务](毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/上海太原失陷以后抗日战争的形势和任务.md)
 
+#### 陕甘宁边区政府、第八路军后方留守处布告(1938.05.15)
+
+[陕甘宁边区政府、第八路军后方留守处布告](毛泽东选集-读书笔记/第二卷/抗日战争时期（上）/陕甘宁边区政府、第八路军后方留守处布告.md)
+
 ## 第三卷
 
 ### 抗日战争时期（下）(1937-1945)
