--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -695,6 +695,10 @@
 
 在抗日民族革命战争中，阶级投降主义实际上是民族投降主义的后备军，是援助右翼营垒而使战争失败的最恶劣的倾向。为了争取中华民族和劳动群众的解放，为了使反对民族投降主义的斗争坚决有力，必须反对共产党内部和无产阶级内部的阶级的投降倾向，要使这一斗争开展于各方面的工作中。
 
+#### 陕甘宁边区政府、第八路军后方留守处布告(1938.05.15)
+
+
+
 ## 第三卷
 
 ### 抗日战争时期（下）(1937-1945)
